--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {
+	"require": {
+		"php": ">=5.6",
+		"laravel/framework": "5.*"
+    },
     "autoload": {
 		"psr-4": {
 			"Esemve\\Hook\\": "src/"
-			}
 		}
 	}
 }
