--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "dev",
 	"require": {
 		"php": ">=5.6",
-		"laravel/framework": "5.* || 6.*"
+		"laravel/framework": "5.* || 6.* || 7.*"
     },
     "autoload": {
 		"psr-4": {
